--- a/Le-délice-des-sens.html
+++ b/Le-délice-des-sens.html
@@ -7,9 +7,9 @@
     <script src="https://kit.fontawesome.com/5f6a837a03.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Shrikhand:regular" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic" rel="stylesheet" />
-    <link rel="stylesheet" href="page-mobile.css">
-    <link rel="stylesheet" href="page-desktop.css">
-    <link rel="stylesheet" href="page-tablette.css">
+    <link rel="stylesheet" href="menu-mobile.css">
+    <link rel="stylesheet" href="menu-desktop.css">
+    <link rel="stylesheet" href="menu-tablette.css">
     <link rel="shortcut icon" href="images/logo/favicon.png">
     <title>La palette du goût</title>
 </head>
