--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <h2>Restaurants</h2>
     <div class="articles">
     <article class="carte-restaurants">
-        <a href="./La-palette-du-goût.htm">
+        <a href="./la-palette-du-goût.htm">
             <figure class="carte">
             <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="la palette du gout" class="carte-img">
             <span class="nouveau">Nouveau</span>
@@ -63,7 +63,7 @@
         </a>
     </article>
     <article class="carte-restaurants">
-        <a href="./La-note-enchantée.html">
+        <a href="./la-note-enchantée.html">
             <figure class="carte">
             <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée" class="carte-img">
             <span class="nouveau">Nouveau</span>
@@ -80,7 +80,7 @@
 
     </article>
     <article class="carte-restaurants">
-        <a href="./À-la-française.html">
+        <a href="./a-la-française.html">
             <figure class="carte">
             <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="la palette du gout" class="carte-img">
             <figcaption>
@@ -95,7 +95,7 @@
             </a>
     </article>
     <article class="carte-restaurants">
-        <a href="./Le-délice-des-sens.html">
+        <a href="./le-délice-des-sens.html">
             <figure class="carte">
             <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="la palette du gout" class="carte-img">
             <figcaption>
