--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -42,7 +42,7 @@
                 <div class="menu-description">
                 <h4>Fricassée d'escargot</h4>
                 <p>Au piment d'Espelette</p>
-                <span>25€</span>
+                <div class="prix">25€</div>
                 </div>
                 <div class="menu-confirmation">
                     <div class="menu-icon"> 
@@ -54,7 +54,7 @@
                 <div class="menu-description">
                     <h4>Foie gras de canard mi-cuit</h4>
                     <p>Et ses copeaux de truffe noire</p>                
-                    <span>35€</span>
+                    <div class="prix">35€</div>
                     </div>
                     <div class="menu-confirmation">
                         <div class="menu-icon"> 
@@ -66,7 +66,7 @@
                 <div class="menu-description">
                     <h4>Oeuf au plat</h4>
                     <p>Assaisonné à la truffe sur lit de caviar</p>
-                    <span>20€</span>
+                    <div class="prix">20€</div>
                     </div>
                     <div class="menu-confirmation">
                         <div class="menu-icon"> 
@@ -81,7 +81,7 @@
                 <div class="menu-description">
                     <h4>Filet de boeuf aux herbes</h4>
                     <p>Accompagné de sa ribambelle de légumes</p>
-                    <span>40€</span>
+                    <div class="prix">40€</div>
                     </div>
                     <div class="menu-confirmation">
                         <div class="menu-icon"> 
@@ -93,7 +93,7 @@
                 <div class="menu-description">
                     <h4>Parmentier de queue de boeuf</h4>
                     <p>À la truffe noire sur sa purée de panais</p>          
-                    <span>35€</span>
+                    <div class="prix">35€</div>
                     </div>
                     <div class="menu-confirmation">
                         <div class="menu-icon"> 
@@ -105,7 +105,7 @@
                 <div class="menu-description">
                     <h4>Filet de turbot</h4>
                     <p>Aux agrumes</p>            
-                    <span>44€</span>
+                    <div class="prix">44€</div>
                     </div>
                     <div class="menu-confirmation">
                         <div class="menu-icon"> 
@@ -120,7 +120,7 @@
                 <div class="menu-description">
                     <h4>Paris-Brest</h4>
                     <p>Revisité</p>    
-                    <span>18€</span>
+                    <div class="prix">18€</div>
                     </div>
                     <div class="menu-confirmation">
                         <div class="menu-icon"> 
@@ -132,7 +132,7 @@
                 <div class="menu-description">
                     <h4>Macaron au chocolat d'exception</h4>
                     <p>Et glace à la vanille de Madagascar</p>  
-                    <span>22€</span>
+                    <div class="prix">22€</div>
                     </div>
                     <div class="menu-confirmation">
                         <div class="menu-icon"> 
@@ -144,7 +144,7 @@
                 <div class="menu-description">
                     <h4>Mousse au chocolat</h4>
                     <p>Au piment d'Espelette et à la truffe noire</p>
-                    <span>23€</span>
+                    <div class="prix">23€</div>
                     </div>
                     <div class="menu-confirmation">
                         <div class="menu-icon"> 
